2.71 (unreleased)
-----------------

- Make event reporting generic so can be used outside of the meitrack chat client class.
- Add more logging to indicate outgoing messages to a device in the event log.


2.70 (2018-08-12)
-----------------

- Fix up the naming of the device and gps restart commands.


2.69 (2018-08-12)
-----------------

- Add ability to send device and gps restart commands from sim chat server.
- Add celery tasks for sending device and gps restart commands.


2.68 (2018-08-08)
-----------------

- Bump version of meitrack lib to bring in changes for rewriting gprs data.


2.67 (2018-08-08)
-----------------

- Add meitrackbot to simulate device movement in pts environment.


2.66 (2018-08-08)
-----------------

- Bump geotool api lib to bring in token fix.


2.65 (2018-08-08)
-----------------

- Update battery level call to happen in own section.
- Add log entries for printing battery levels.


2.64 (2018-08-08)
-----------------

- Add api call for update battery levels.


2.63 (2018-08-04)
-----------------

- Fix bug in closing of socket on client timeout. Was causing an exception that would halt processing.


2.62 (2018-08-01)
-----------------

- Fix bug causing exception when trying to age out an old connection.
- Increase timeout to 10 minutes.


2.61 (2018-07-31)
-----------------

- Add logic to disconnect expired connections.


2.60 (2018-07-31)
-----------------

- Don't update last tick when sending data as this causes the connection to never time out in some circumstances.


2.59 (2018-07-31)
-----------------

- Add ability to print all comms regardless of log levels.
- Change some of the log entries caused by kubernetes health checks to info instead of error.


2.58 (2018-07-31)
-----------------

- Add ability to identify simcom clients now that we have transitioned to python 3.


2.57 (2018-07-07)
-----------------

- Implement taxi data logging functionality.


2.56 (2018-07-07)
-----------------
