@@ -3,7 +3,7 @@ from setuptools import setup, find_packages
 setup(
       name='simchatserver',
       version='2.71.dev0',
-      description=('Project to communicate with simcom and meitrack devices'),
+      description='Project to communicate with simcom and meitrack devices',
       url='https://bitbucket.org/mjclark1/python-tool-simchatserver.git',
       author='Matt Clark',
       author_email='mattjclark0407@hotmail.com',
@@ -34,7 +34,7 @@ setup(
             "python-memcached",
             'pika',
             'geotooldbapi>=1.4',
-            'geotoolapi>=1.19',
+            'geotoolapi>=1.22',
             'meitrackparser>=1.13',
             'celery',
             'kombu',
