@@ -4,7 +4,7 @@ from celery import Celery
 from kombu import Exchange, Queue
 from kombu.common import Broadcast
 from sim_chat_lib.master import send_take_photo_by_imei, send_photo_list_by_imei, send_firmware_update, \
-    send_restart_device, send_restart_gps
+    send_restart_device, send_restart_gps, send_toggle_debug
 from sim_chat_lib.master import send_cancel_firmware_update, send_update_configuration
 
 CELERY_BROKER_URL = os.environ.get('CELERY_BROKER_URL', 'amqp://guest@localhost')
@@ -72,6 +72,12 @@ def restart_device(imei):
 def restart_gps(imei):
     result = send_restart_gps(imei)
     return 'Issued gps restart for device {} with result {}'.format(imei, result)
+
+
+@sim_chat_server_celery_app.task(name='sim_chat_lib.celerytasks.sendcommand.toggle_debug')
+def toggle_debug(imei):
+    result = send_toggle_debug(imei)
+    return 'Issued debug toggle for device {} with result {}'.format(imei, result)
 
 
 default_exchange = Exchange('sim_chat_lib.celerytasks.sendcommand.default', type='direct')
